# openenv-manufacturing-rl

./: Dockerfile  README.md  __init__.py  agent.py  app.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py  test_env.py
env/: __init__.py  env.py  models.py  openenv.yaml  tasks.py
manufacturing_env/: __init__.py  client.py  env.py  models.py  openenv.yaml  tasks.py
manufacturing_env/server/: __init__.py  app.py
server/: __init__.py  app.py
