[project]
name = "manufacturing-env"
version = "0.1.0"
description = "Manufacturing OpenEnv environment"
authors = [{ name = "Garima" }]

dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["env", "server"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
